--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    outline:1px solid red;
+    /* outline:1px solid red; */
 }
 /* *************************left**************************** */
 .bordure{
@@ -50,9 +50,8 @@
 .rowe-flex{
     list-style-type: none;
 }
-.carde{
-    background-image: url("./img/bg-image.jpg");
-    background-size: cover;
+.purpose{
+    font-size: 35px;
 }
 .pod{
     font-size: 13px;
@@ -86,10 +85,14 @@
 .icone{
     position: relative;
 }
+.icone input{
+    position: absolute;
+    width: 100%;
+}
 .icone span{
     position: absolute;
-    top: 3px;
-    left: 160px;
+    top: 4px;
+    right: 10px;
 }
 .follow{
     background: lightskyblue;
@@ -104,19 +107,19 @@
 .prgs{
     margin:  0 auto;
     width: 60%;
-    height: 1px;
+    height: 2px;
     background: gray;
 }
 .prgss{
     position: relative;
     width: 80%;
-    height: 3px;
+    height: 4px;
     background: #fff;
 }
 .prg{
     position: absolute;
     right: 0;
-    top: -5px;
+    top: -4px;
     border-radius: 50%;
     width: 10px;
     height: 10px;
@@ -133,11 +136,35 @@
    .media{
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    align-items: center;
     justify-content: center;
    }
    .search{
+    margin-top: 0;
+   }
+   .carousel-caption{
+    max-height: 100px;
+    padding: 0;
+   }
+   .purpose{
+    margin: 5px;
+    font-size: 12px;
+   }
+   .jay,.m,.lorem-play{
+    font-size: 10px;
+    margin: 5px 0;
+    white-space: nowrap;
+   }
+   .carsl{
+    display: flex;
+    gap: 5px;
+   }
+   .gape{
+    display: flex;
+    gap: 5px;
+   }
+   input[type=button]{
+    font-size: 10px;
+    padding: 5px;
     margin-top: 0;
    }
 }
