--- a/style.css
+++ b/style.css
@@ -136,14 +136,11 @@
     display: flex;
     gap: 40px;
 }
-@media screen and (max-width:768px){
+@media screen and (max-width:600px){
    .media{
     display: flex;
     flex-direction: column;
     justify-content: center;
-   }
-   .search{
-    margin-top: 0;
    }
    .carousel-caption{
     max-height: 100px;
@@ -172,3 +169,11 @@
     margin-top: 0;
    }
 }
+@media screen and (min-width:601px) and (max-width:992px){
+    .media{
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items:center ;
+    }
+ }
